- Fixed an issue with hidden field values mapped with form submission step not being stored into child entry correctly.
- Fixed an issue with Update An Entry local/remote processing that prevents updates when the form of selected entry does not match step settings target form.