@@ -3,7 +3,7 @@
 Plugin Name: Gravity Flow Form Connector
 Plugin URI: https://gravityflow.io
 Description: Form Connector Extension for Gravity Flow.
-Version: 1.7.2-dev
+Version: 1.7.4-dev
 Author: Gravity Flow
 Author URI: https://gravityflow.io
 License: GPL-2.0+
@@ -25,7 +25,7 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 */
 
-define( 'GRAVITY_FLOW_FORM_CONNECTOR_VERSION', '1.7.2-dev' );
+define( 'GRAVITY_FLOW_FORM_CONNECTOR_VERSION', '1.7.4-dev' );
 define( 'GRAVITY_FLOW_FORM_CONNECTOR_EDD_ITEM_ID', 3375 );
 define( 'GRAVITY_FLOW_FORM_CONNECTOR_EDD_ITEM_NAME', 'Form Connector' );
 
