@@ -1,2 +1,3 @@
+- Fixed an issue where the form submission step cannot be released if the payment method set in the target form is Stripe Checkout (Stripe add-on > 3.0).
 - Fixed an issue with hidden field values mapped with form submission step not being stored into child entry correctly.
 - Fixed an issue with Update An Entry local/remote processing that prevents updates when the form of selected entry does not match step settings target form.
